--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,10 @@ Version 1.3.08
  = Fixed exploit where you could gain tons of Acrobatics XP from spamming Ender Pearls
  = Fixed normal pistons marking a block as user-placed on retract if it wasn't a sticky piston (thanks turt2live!)
  = Fixed handling of the Unbreaking enchantment so that tools are actually damaged as they should now
+ ! Changed Hardcore Vampirism to steal a minimum of 1 skill level from a player no matter the percentage
+ ! Changed Hardcore & Vampirism to not be executed if percentages were set to zero or below
+ ! Changed Vampirism to actually remove stats from the victim
+ ! Changed Vampirism to inform the victim of their stat loss
  ! Changed Mining to allow Silk Touch to work again since the dupe exploit has been fixed.
  ! Changed Metrics to also report if the server uses plugin profiling
 
