--- a/Changelog.txt
+++ b/Changelog.txt
@@ -53,6 +53,8 @@ Version 1.4.00-dev
  ! Changed McMMOChatEvent to contain the plugin that the event originated from.
  ! Changed Excavation to have individual XP values for each block type, rather than a base XP value.
  ! Changed the way party teleportation works. When using /ptp, the target player needs to confirm the teleport before it takes place. (Configurable)
+ ! Changed BeastLore: Now also displays offline player names
+ - Removed Party "master/apprentice" system. Replaced with the new party XP share feature.
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
