--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ Version 1.4.00-dev
  + Added XP bonus for Archery based on distance from shooter to target
  + Added ability to config Hylian Luck drops through treasures.yml
  + Added party XP sharing
+ + Added vanilla XP boost for Fishing - includes permissions, config options, etc
  = Fixed the guide usage string showing up every time /skillname was called
  = Fixed Spout not being able to precache our resources properly, and therefore making our XP bars fail
  = Fixed Spout config files loading / generating when they shouldn't have
