--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,6 +31,7 @@ Version 1.4.07-dev
  = Fixed a bug where LevelUpEvent would be called for an offline player.
  = Fixed a bug where teleport location was never reset if warmup was set to 0 for Chimaera Wing.
  = Fixed a bug where the Dodge DamageModifier wasn't being read from advanced.yml
+ = Fixed a bug where squid were not awarding XP.
  ! Changed the way Repair hands out XP, also added config options to control Repair XP
  ! Changed Swords "Counter Attack" ability from passive to active. Blocking is required to activate.
  ! Hardcore mode can now be toggled for each skill individually
