--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,29 +8,29 @@ Key:
   - Removal
 
 Version 1.4.07-dev
- + Added ability to summon horses via Call of the Wild using apples
+ + Added ability to summon horses via "Call of the Wild" using apples
  + Added XP gain to Taming for horses
- + Added new permission nodes to allow more control over Taming and Call of the Wild
+ + Added new permission nodes to allow more control over Taming and "Call of the Wild"
  + Added new experience.yml config file! Moved all experience related settings from config.yml to experience.yml
  + Added support for EXPONENTIAL formula curves to experience.yml
  + Added new /mcconvert command to convert players levels and experience from one formula curve to another.
- + Added snow to excavation
+ + Added snow to Excavation blocks
  + Added new experience curve option. Cumulative curve, calculates experience needed for next level using power level.
- + Added extra settings to config.yml for Call of the Wild (Taming)
- + Added a 5 second cooldown after teleporting before Acrobatics XP can be earned. + Config option to disable
+ + Added extra settings to config.yml for "Call of the Wild" (Taming)
+ + Added a 5 second cooldown after teleporting before Acrobatics XP can be earned. Plus a config option to disable
  + Added new API methods to ExperienceAPI to get a players rank on the leaderboards
  + Added new McMMOPlayerDeathPenaltyEvent, fired when a player dies and would lose levels
  + Added new McMMOPlayerLevelChangeEvent, fired when a players level changes
  + Added new McMMOPlayerLevelDownEvent, fired when a player loses levels
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug where FakeEntityDamageByEntityEvent wasn't being fired
- = Fixed bug with Skull Splitter not finding the locale string
+ = Fixed bug with "Skull Splitter" not finding the locale string
  = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.
- = Fixed a bug with Beast Lore when the entity had no owner but was tamed.
+ = Fixed a bug with "Beast Lore" when the entity had no owner but was tamed.
  = Fixed a bug where AbilityDeactivateEvent would throw an error if the player logged out before his ability ran out.
  = Fixed a bug where LevelUpEvent would be called for an offline player.
- = Fixed a bug where teleport location was never reset if warmup was set to 0 for Chimaera Wing.
- = Fixed a bug where the Dodge DamageModifier wasn't being read from advanced.yml
+ = Fixed a bug where teleport location was never reset if warmup was set to 0 for "Chimaera Wing".
+ = Fixed a bug where the "Dodge" DamageModifier wasn't being read from advanced.yml
  = Fixed a bug where squid were not awarding XP.
  ! Changed the way Repair hands out XP, also added config options to control Repair XP
  ! Changed Swords "Counter Attack" ability from passive to active. Blocking is required to activate.
@@ -43,7 +43,7 @@ Version 1.4.07-dev
  ! Slightly improved update checker feedback
  ! Updated localization files
  ! Party item share category states are now saved when the server shuts down.
- ! When using Super Breaker or Giga Driller abilities extra tool durability is used (again)
+ ! When using "Super Breaker" or "Giga Driller" abilities extra tool durability is used (again)
  - The /mmoupdate command has been removed. It is replaced by /mcconvert database
  - Removed Abilities.Tools.Durability_Loss_Enabled, set Abilities.Tools.Durability_Loss to 0 to disable instead.
 
