--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.4.07-dev
+Version 1.4.07
  + Added XP boost to Acrobatics when wearing Boots of Feather Falling
  + Added SQL Database can now recover from a dropped connection without losing data. (Thanks Riking!)
  + Added more tiers to Fishing, Repair and Smelting!
