--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.4.08-dev
  = Fixed bug with Salvage not reading the config value for the anvil material.
  = Fixed exploit where you could receive smelting XP for improper items
  = Fixed bug where the Unbreaking enchantment was ignored when using "Super Breaker" or "Giga Drill Breaker"
+ = Fixed bug which prevented players from gaining Acrobatics XP when the setting 'Prevent_XP_After_Teleport' was set to false
  ! Updated localization files
 
 Version 1.4.07
