--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,11 +8,13 @@ Key:
   - Removal
 
 Version 1.4.08-dev
+ + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
  + Added the possibility to gain experience when using Fishing "Shake"
  + Added config options to disable various sound effects
  + Smelting now works with custom ores - add smelting XP value to blocks.yml, or it will default to 1/10th of normal XP.
  + Added automatic cleanup of backups folder.
  + Added bypass permission for finding Fishing traps
+ = Fixed bug where LeafBlower permissions were ignored
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
  = Fixed bug with Salvage not reading the config value for the anvil material.
@@ -20,6 +22,8 @@ Version 1.4.08-dev
  = Fixed bug where the Unbreaking enchantment was ignored when using "Super Breaker" or "Giga Drill Breaker"
  = Fixed bug which prevented players from gaining Acrobatics XP when the setting 'Prevent_XP_After_Teleport' was set to false
  ! Updated localization files
+ ! Changed AxesCritical to CriticalHit in config file
+ ! Changed several secondary ability permissions(deprecated versions still exist)
 
 Version 1.4.07
  + Added XP boost to Acrobatics when wearing Boots of Feather Falling
